# adventofcode-2024

./: README.md
haskell/: aoc2024.cabal  cabal.project
haskell/harness/AOC/: Harness.hs
haskell/solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.dump-simpl  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs
haskell/src/: Main.hs  day14interactive.hs
haskell/util/: Grid2D.hs  ParsingPrelude.hs  Util.hs
